fixes footer to the bottom of the page without overlapping content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,12 @@ body {
 input {
   margin-bottom: 5px !important;
 }
+
+#page-container{
+  position: relative;
+  min-height: 100%;
+}
+
+#content-wrap{
+  padding-bottom: 60px; /*Höhe des Footers*/
+}
