--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -9,6 +9,13 @@
   text-decoration: none;
 }
 
+footer{
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 60px;
+}
+
 /*
 a:link{
   color: #F7F7F7;
